--- a/tests/ansible.yml
+++ b/tests/ansible.yml
@@ -4,18 +4,18 @@
 
   tasks:
   - name: configure top level configuration
-    cisco.ios.ios_config:
+    ios_config:
       lines: hostname ZAEBOZ
 
   - name: configure interface settings
-    cisco.ios.ios_config:
+    ios_config:
       lines:
       - description test interface
       - ip address 172.2.2.2 255.255.255.0
       parents: interface GigabitEthernet2
 
   - name: load new acl into device
-    cisco.ios.ios_config:
+    ios_config:
       lines:
       - 10 permit ip host 192.0.2.1 any log
       - 20 permit ip host 192.0.2.2 any log
@@ -27,11 +27,11 @@
       match: exact
 
   - name: save running to startup when modified
-    cisco.ios.ios_config:
+    ios_config:
       save_when: modified
 
   - name: for idempotency, use full-form commands
-    cisco.ios.ios_config:
+    ios_config:
       lines:
         # - shut
       - shutdown
