--- a/tests/ansible.yml
+++ b/tests/ansible.yml
@@ -1,11 +1,11 @@
-- hosts: all
+- hosts: routers
   connection: network_cli
   gather_facts: false
 
   tasks:
   - name: configure top level configuration
     ios_config:
-      lines: hostname ZAEBOZ
+      lines: hostname CHECK123
 
   - name: configure interface settings
     ios_config:
@@ -37,3 +37,42 @@
       - shutdown
       # parents: int gig1/0/11
       parents: interface GigabitEthernet3
+
+- hosts: switches
+  connection: network_cli
+  gather_facts: false
+
+  tasks:
+  - name: configure top level configuration and save it
+  cisco.nxos.nxos_config:
+    lines: hostname CHECK321
+    save_when: modified
+
+- cisco.nxos.nxos_config:
+    lines:
+    - 10 permit ip 192.0.2.1/32 any log
+    - 20 permit ip 192.0.2.2/32 any log
+    - 30 permit ip 192.0.2.3/32 any log
+    - 40 permit ip 192.0.2.4/32 any log
+    - 50 permit ip 192.0.2.5/32 any log
+    parents: ip access-list test
+    before: no ip access-list test
+    match: exact
+
+- cisco.nxos.nxos_config:
+    lines:
+    - 10 permit ip 192.0.2.1/32 any log
+    - 20 permit ip 192.0.2.2/32 any log
+    - 30 permit ip 192.0.2.3/32 any log
+    - 40 permit ip 192.0.2.4/32 any log
+    parents: ip access-list test
+    before: no ip access-list test
+    replace: block
+
+- name: for idempotency, use full-form commands
+  cisco.nxos.nxos_config:
+    lines:
+      # - shut
+    - shutdown
+    # parents: int eth1/1
+    parents: interface Ethernet1/1
