--- a/tests/ansible.yml
+++ b/tests/ansible.yml
@@ -44,35 +44,17 @@
 
   tasks:
   - name: configure top level configuration and save it
-  nxos_config:
-    lines: hostname CHECK321
-    save_when: modified
+    nxos_config:
+      lines: hostname CHECK321
+      save_when: modified
 
-- nxos_config:
-    lines:
-    - 10 permit ip 192.0.2.1/32 any log
-    - 20 permit ip 192.0.2.2/32 any log
-    - 30 permit ip 192.0.2.3/32 any log
-    - 40 permit ip 192.0.2.4/32 any log
-    - 50 permit ip 192.0.2.5/32 any log
-    parents: ip access-list test
-    before: no ip access-list test
-    match: exact
-
-- nxos_config:
-    lines:
-    - 10 permit ip 192.0.2.1/32 any log
-    - 20 permit ip 192.0.2.2/32 any log
-    - 30 permit ip 192.0.2.3/32 any log
-    - 40 permit ip 192.0.2.4/32 any log
-    parents: ip access-list test
-    before: no ip access-list test
-    replace: block
-
-- name: for idempotency, use full-form commands
-  nxos_config:
-    lines:
-      # - shut
-    - shutdown
-    # parents: int eth1/1
-    parents: interface Ethernet1/1
+  - name: configure ACL
+    nxos_config:
+      lines:
+      - 10 permit ip 192.0.2.1/32 any log
+      - 20 permit ip 192.0.2.2/32 any log
+      - 30 permit ip 192.0.2.3/32 any log
+      - 40 permit ip 192.0.2.4/32 any log
+      - 50 permit ip 192.0.2.5/32 any log
+      parents: ip access-list test
+      before: no ip access-list test
