--- a/tests/ansible.yml
+++ b/tests/ansible.yml
@@ -5,13 +5,13 @@
   tasks:
   - name: configure top level configuration
     ios_config:
-      lines: hostname CHECK123
+      lines: hostname CHECK321
 
   - name: configure interface settings
     ios_config:
       lines:
       - description test interface
-      - ip address 172.2.2.2 255.255.255.0
+      - ip address 172.3.3.3 255.255.255.0
       parents: interface GigabitEthernet2
 
   - name: load new acl into device
@@ -22,8 +22,8 @@
       - 30 permit ip host 192.0.2.3 any log
       - 40 permit ip host 192.0.2.4 any log
       - 50 permit ip host 192.0.2.5 any log
-      parents: ip access-list extended test1
-      before: no ip access-list extended test1
+      parents: ip access-list extended test2
+      before: no ip access-list extended test2
       match: exact
 
   - name: save running to startup when modified
@@ -38,23 +38,22 @@
       # parents: int gig1/0/11
       parents: interface GigabitEthernet3
 
-- hosts: switches
-  connection: network_cli
-  gather_facts: false
+  - name: print running configuration and save it in a variable
+    ios_command:
+      commands: "show running-config"
+      register: cli_result
 
-  tasks:
-  - name: configure top level configuration and save it
-    nxos_config:
-      lines: hostname CHECK321
-      save_when: modified
+  - name: print received configuration to stdout
+    debug:
+      msg: {{ cli_result }}
 
-  - name: configure ACL
-    nxos_config:
-      lines:
-      - 10 permit ip 192.0.2.1/32 any log
-      - 20 permit ip 192.0.2.2/32 any log
-      - 30 permit ip 192.0.2.3/32 any log
-      - 40 permit ip 192.0.2.4/32 any log
-      - 50 permit ip 192.0.2.5/32 any log
-      parents: ip access-list test
-      before: no ip access-list test
+  - name: "TASK 3: Create outputs/ folder"
+    file:
+      path: "outputs"
+      state: directory
+    run_once: true
+
+  - name: "TASK 4: Write output to file"
+    copy:
+      content: "{{ cli_result.stdout[0] }}\n"
+      dest: "outputs/{{ inventory_hostname }}.txt"
