--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -10,3 +10,8 @@
       notify: config_changed
       register: cli_result
   
+  handlers:
+    - name: "HANDLER 1: Display relevant changes"
+      listen: config_changed
+      debug:
+        msg: "{{ cli_result.commands }}"
