--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -9,7 +9,29 @@
         save_when: changed
       notify: config_changed
       register: cli_result
-  
+    - name: "Checking S2S tunnel is properly built"  
+      block:
+        - name: "Checking overall status of VPN"
+          ios_command:
+            command: "show crypto session"
+          register: "s2svpn_status"
+          until: "'UP-ACTIVE' in s2svpn_status.stdout"
+          retries: 10
+          delay: 2
+        - name: "Check IKEv1 SA status to {{ remote_address }}"
+          ios_command:
+            command: "show crypto ikev1 sa remote {{ remote_address }}"
+          register: "s2svpn_status_ike"
+          until: "'READY' in s2svpn_status_ike.stdout"
+          retries: 10
+          delay: 2
+        - name: "Check IPSEC SA status to {{ remote_address }}"
+          ios_command:
+            command: "show crypto ipsec sa peer {{ remote_address }}"
+          register: "s2svpn_status_ipsec"
+          until: "'READY' in s2svpn_status_ipsec.stdout"
+          retries: 10
+          delay: 2
   handlers:
     - name: "HANDLER 1: Display relevant changes"
       listen: config_changed
