--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -17,7 +17,7 @@
           register: "s2svpn_status"
         - name: "Print IPSEC status output as dict"
           debug: 
-            msg: "{{ s2svpn_status.stdout['Session status'] }}"
+            msg: "{{ s2svpn_status[2] }}"
         - name: "Check IKEv1 SA status to {{ remote_address }}"
           ios_command:
             commands: "show crypto ikev1 sa remote {{ remote_address }}"
