--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -10,12 +10,18 @@
         save_when: changed
       notify: config_changed
       register: cli_result
+    - name: Read in parse_genie role
+	      include_role:
+	        name: clay584.parse_genie
     - name: "Checking S2S tunnel is properly built"  
       block:
         - name: "Checking overall status of VPN"
           ios_command:
             commands: "show crypto session"
           register: "s2svpn_status"
+        - name: Debug Genie Filter
+	        debug:
+	          msg: "{{ cli_result | parse_genie(command='show crypto session', os='iosxe') }}"
         - name: "Print IPSEC status output as dict"
           #until: "'UP-ACTIVE' in s2svpn_status['stdout']"
           #retries: 10
