--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -10,7 +10,7 @@
         save_when: changed
       notify: config_changed
       register: cli_result
-    - name: Read in parse_genie role
+    - name: "Read in parse_genie role"
         include_role:
         name: clay584.parse_genie
     - name: "Checking S2S tunnel is properly built"  
