--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -19,7 +19,7 @@
           ios_command:
             commands: "show crypto session"
           register: "s2svpn_status"
-        - name: Debug Genie Filter
+        - name: "Debug Genie Filter"
 	        debug:
 	          msg: "{{ cli_result | parse_genie(command='show crypto session', os='iosxe') }}"
         - name: "Print IPSEC status output as dict"
