--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -22,7 +22,7 @@
         - name: "Debug Genie Filter"
           debug:
             msg: "{{ s2svpn_status | parse_genie(command='show crypto session', os='iosxe') }}"
-        - name: "Print IPSEC status output as dict"
+        #- name: "Print IPSEC status output as dict"
           #until: "'UP-ACTIVE' in s2svpn_status['stdout']"
           #retries: 10
           #delay: 2
