--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -21,7 +21,7 @@
           register: s2svpn_status
         - name: "Debug Genie Filter"
           debug:
-            msg: "{{ s2svpn_status | parse_genie(command='show crypto session', os='iosxe') }}"
+            msg: "{{ s2svpn_status | parse_genie(command='show version', os='iosxe') }}"
         #- name: "Print IPSEC status output as dict"
           #until: "'UP-ACTIVE' in s2svpn_status['stdout']"
           #retries: 10
