--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -10,14 +10,14 @@
         save_when: changed
       register: cli_result
     - name: "Checking S2S tunnel is properly built"
-      ios_config:
+      ios_command:
         command: "show crypto ikev2 sa remote {{ tunnel12 }}"
         register: "ikev2_check"
         until: "'READY' in ikev2_check.stdout"
         retries: 10
         delay: 2
     - name: "Check IPsec SA status to {{ tunnel12 }}"
-      ios_config:
+      ios_command:
         command: "show crypto ipsec sa peer {{ tunnel12 }}"
         register: "ipsec_check"
         until: "'Status: ACTIVE(ACTIVE)' in ipsec_check.stdout"
