--- a/tests/ansible-vpn.yml
+++ b/tests/ansible-vpn.yml
@@ -12,7 +12,7 @@
     - name: "Checking S2S tunnel is properly built"
       ios_command:
         commands: 
-            - "show crypto ikev2 sa remote {{ tunnel12 }}"
+            - show crypto ikev2 sa remote {{ tunnel12 }}
         register: "ikev2_check"
         until: "'READY' in ikev2_check.stdout"
         retries: 10
@@ -20,7 +20,7 @@
     - name: "Check IPsec SA status to {{ tunnel12 }}"
       ios_command:
         commands:
-            - "show crypto ipsec sa peer {{ tunnel12 }}"
+            - show crypto ipsec sa peer {{ tunnel12 }}
         register: "ipsec_check"
         until: "'Status: ACTIVE(ACTIVE)' in ipsec_check.stdout"
         retries: 3
